# short-domain-find

./: .gitignore  README.md  config.py  download-suffix-list.sh  filter_suffixs.py  main.py  pyproject.toml  suffixs.txt  utils.py
new_api/: main.py  pyproject.toml
old/: check_short_prefix.py  config.py  get_suffixs.py  pyproject.toml  suffixs.txt  utils.py  whois_checker.py
old-bulk-whois-api/: .gitignore  config.py  pyproject.toml
